style.css
body {
    display: flex;
    flex-direction: column;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin: 0px;
    padding: 0px;
}

a {
    -webkit-text-fill-color: #E5E7EB;
    text-decoration: none;
    font-size: 18px;
}

p {
    margin: 0px;
    padding: 0px;
}

.main-sec-1 {
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
    -webkit-text-fill-color: #E5E7EB;
    padding: 0px 150px 90px 150px;
}

.header {
    margin: 20px 10px 0px 10px;
    gap: 20px;
    display: flex;
}

.header-elements {
    flex: 1;
}

.logo {
    margin-right: auto;
    font-size: 24px;
    -webkit-text-fill-color: #F9FAF8;
    font-weight: bold;
}

.main-sec-1-content {
    margin: 70px 10px 0px 10px;
    display: flex;
}

.main-sec-1-textandbutton {
    flex: 1;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    padding-right: 50px;
    
}

.sec-1-heading {
    flex: 1;
    font-size: 48px;
    font-weight: bolder;
    -webkit-text-fill-color: #F9FAF8;
}

.sec-1-paragraph {
    flex: 1;
    margin-bottom: 11px;
}

.sign-up-button {
    background-color: #3882F6;
    flex: 0;
    border: 0px;
    padding: 10px;
    width: 100px;
    border-radius: 10px;
    font-weight:600;
}

.image-placeholder {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: grey;
    
}

.main-sec-2 {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.main-sec-2-heading {
    font-size: 36px;
    -webkit-text-fill-color: #1F2937;
    margin: 30px;
    font-weight: bolder;
}

.main-sec-2-content {
    display: flex;
}

.main-sec-2-content-item {
    display: flex;
    flex-direction: column;
}

.placeholder {
    width: 20px;
    height: 20px;
    flex: 1 1 auto;
    border: 15px #3882F6;
    background-color: #1F2937;
}

.placeholder-subtext {
    font-weight: 10;
    flex: 1 1 auto;
    text-align: center;
}

